# deepagents

examples/smart-forgetfulness-care/: .env.example  AGENTS.md  README.md  agent.py  pyproject.toml
examples/smart-forgetfulness-care/data/: devices.py
examples/smart-forgetfulness-care/skills/: __init__.py  guardian_skill.md  iot_tools.py
examples/smart-forgetfulness-care/tools/: __init__.py  iot.py
scenarios/: outing_guardian.md
